<resources>
    <string name="app_name">E-Khata</string>
    <string name="All">سب</string>
    <string name="AppLock">ایپ لاک</string>
    <string name="BackupInfo">بیک اپ کریں</string>
    <string name="Balance">= بیلینس</string>
    <string name="Balance1">بیلینس=</string>
    <string name="Bbalance">بیلینس:</string>
    <string name="Business">بزنس کارڈ</string>
    <string name="ByAZ">نام کے لحاظ سے ترتیب(A-Z)</string>
    <string name="ByZA">نام کے لحاظ سے ترتیب(Z-A)</string>
    <string name="ChangeAppLockPin">ایپ لاک پن تبدیل کریں</string>
    <string name="CodeSent">اس نمبر پر کوڈ بھیجا گیا:</string>
    <string name="CollectMoneyOn">کو پیمنٹ وصول کرنی تھی</string>
    <string name="CollectMoneyOnFuture">کو پیمنٹ وصول کرنی ہے</string>
    <string name="Collections">ریکوری</string>
    <string name="ConfirmNewPIN">نئے پن کی تصدیق کریں</string>
    <string name="Contact">ہمیں کال کریں</string>
    <string name="CreateAnewDigiKhataPIN">نیا ڈیجی کھاتہ پن تیار کریں</string>
    <string name="CshareBuisenss">اپنا بزنس کارڈ بنائیں اور اس کو شئیر کریں</string>
    <string name="DaysAgo">دن پہلے ادا کرنے تھے.</string>
    <string name="Delete">تمام ڈیٹا حذف کریں</string>
    <string name="DeleteTransaction">حذف کریں</string>
    <string name="DeletenSettle">حذف کریں اور اکاؤنٹ طے کریں</string>
    <string name="Details">تفصیلات درج کریں</string>
    <string name="DidnotRece">کوڈ موصول نہیں ہوا؟</string>
    <string name="DigiKhataislocked">ڈیجی کھاتہ 2 منٹ کے لئے لاک ہے۔ براہ کرم</string>
    <string name="Download">ڈاؤن لوڈ کریں</string>
    <string name="EditNumber">ترمیم کریں</string>
    <string name="EnterDigiKhataPIN">ڈیجی کھاتہ پن درج کریں</string>
    <string name="EnterPhone">موبائل نمبر درج کریں</string>
    <string name="EnterSix">6 ہندسوں کا کوڈ دیں</string>
    <string name="EnterYourBusinessName">اپنا یا اپنے کاروبار کا نام دیں</string>
    <string name="Entries">انٹریز</string>
    <string name="EntryDetail">تفصیل انٹری</string>
    <string name="ForgotPIN">پن بھول گئے ہیں؟</string>
    <string name="FutureCollections">آئندہ ریکوری</string>
    <string name="Gave">نے</string>
    <string name="GetPin">کوڈ حاصل کریں</string>
    <string name="Ko">کو</string>
    <string name="Ko1">سے</string>
    <string name="Lang">ایپ کی زبان</string>
    <string name="LastBackup">آخری بیک اپ:</string>
    <string name="LastM">پچھلا مہینہ</string>
    <string name="LastW">پچھلا ہفتہ</string>
    <string name="MostR">سب سے نئی</string>
    <string name="Name">نام</string>
    <string name="NoBackupFound">کوئی بیک اپ نہیں ملا</string>
    <string name="Oldest">سب سے پرانی</string>
    <string name="On" />
    <string name="On1" />
    <string name="PaymentCollectionDate">ریکوری کی تاریخ دیں</string>
    <string name="PaymentDateWas">انہوں نے</string>
    <string name="PaymentDateis">وہ</string>
    <string name="Phone">فون نمبر</string>
    <string name="PleaseEnterYourPIN">برائے مہربانی اپنا پن درج کریں</string>
    <string name="PreviousCollection">سابقہ ریکوری</string>
    <string name="RESETPIN">پن ریسیٹ کریں</string>
    <string name="Received">نے</string>
    <string name="RemoveAppLock">ایپ لاک ختم کریں</string>
    <string name="ResendCdeAfter">دوبارہ بھیجیں</string>
    <string name="ResendCode">کوڈ میسج پر وصول کریں</string>
    <string name="Rs1" />
    <string name="Rs2">روپے</string>
    <string name="Setting">بیک اپ</string>
    <string name="Share">شیئر کریں</string>
    <string name="ShareApp">شئیرایپ</string>
    <string name="ShareOnSms">ایس ایم ایس</string>
    <string name="ShareOnSms1">ایس ایم ایس پر شیئر کریں</string>
    <string name="ShareOnWhatsapp">واٹس ایپ پر شیئر کریں</string>
    <string name="ShareOnWhatsapp1">واٹس ایپ پر شیئر کریں</string>
    <string name="SingleD">ایک تاریخ</string>
    <string name="Submit">تصدیق کریں</string>
    <string name="TheywillPayToday">وہ آج آپ کو ادا کریں گے .</string>
    <string name="ThisWillErase">اس سے آپ کی ساری ٹرانزیکشن کی تفصیلات مٹ جائیں گی. آپ اسے واپس نہیں کر پائیں گے.</string>
    <string name="ThisWillErase2" />
    <string name="TodaysCollection">آج کی ریکوری</string>
    <string name="UserProf">آپ کی پروفائل</string>
    <string name="Verified">ڈیجی کھاتہ سے تصدیق شدہ</string>
    <string name="VerifyPhone">موبائل نمبر کی تصدیق کریں</string>
    <string name="WhenTheyWillPAy">وہ کب آپ کو ادا کریں گے؟</string>
    <string name="Willpayyou">آپ نے لینے ہیں</string>
    <string name="WrongPINTRYAGAIN1MOREAttem">غلط پن دوبارہ کوشش کریں. 1 اور کوشش باقی ہے</string>
    <string name="WrongPINTRYAGAIN2MOREAttem">غلط پن دوبارہ کوشش کریں. 2 اور کوششیں باقی ہیں</string>
    <string name="YouWillpay">آپ نے دینے ہیں</string>
    <string name="Youowe">کو آپ پر واجب الادا ہیں.</string>
    <string name="YourBusinessName">آپ کا یا آپ کے بزنس کا نام</string>
    <string name="add_business">نیا بزنس</string>
    <string name="add_new_business">نیا کاروبار</string>
    <string name="add_new_customer">نیا کسٹمر بنائیں</string>
    <string name="afterDate">کو ادا کریں گے.</string>
    <string name="afterDateSingle">کو لیے</string>
    <string name="afterDateSingle1">کو دیے</string>
    <string name="and_press">\' ٹائپ کریں اور ڈیلیٹ کا بٹن دبائیں:</string>
    <string name="bAddress">پتہ</string>
    <string name="bEmail">ای میل</string>
    <string name="bName">کاروبار کا نام</string>
    <string name="bPhone">فون نمبر</string>
    <string name="bTag">ٹیگ لائن</string>
    <string name="bYname">اپ کا نام</string>
    <string name="backup_text">جب بھی آپ کا فون انٹرنیٹ سے منسلک ہوتا ہے تو آپ کے ڈیٹا کا خود بخود بیک اپ ہوجاتا ہے۔ اگر آپ اس فون کو فارمیٹ کرتے ہیں یا غلطی سے ایپ کو حذف کرتے ہیں ، تو صرف ایپ کو دوبارہ ڈاؤن لوڈ کریں اور اپنا لاگ ان فون نمبر استعمال کرکے لاگ ان کریں۔ آپ کا ڈیٹا خود بخود بحال ہوجائے گا۔</string>
    <string name="business">بزنس</string>
    <string name="create_new_business">نیا بزنس بنائیں</string>
    <string name="customer">کسٹمر</string>
    <string name="customerProfile">کسٹمر پروفائل</string>
    <string name="customer_name">کسٹمر کا نام</string>
    <string name="delete_business">کاروبار حذف کریں</string>
    <string name="edit">ترمیم کریں</string>
    <string name="empty">کے بعد دوبارہ کوشش کریں</string>
    <string name="end">آخری تاریخ</string>
    <string name="from" />
    <string name="gave">آپ نے دیے</string>
    <string name="gave12">آپ نے دیے (Rs)</string>
    <string name="got">آپ نے لیے</string>
    <string name="got12">آپ نے لیے (Rs)</string>
    <string name="home">ھوم</string>
    <string name="how_to_use_digi_khata">ڈیجی کھاتہ استعمال کا طریقہ</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="ledger">کسٹمر لیجر</string>
    <string name="more">مزید</string>
    <string name="net">بقیہ رقم</string>
    <string name="newDate">نئی تاریخ</string>
    <string name="newcustomer">نیا کسٹمر</string>
    <string name="noOfCustomerCan">کسٹمر کو تاریخ دی جا سکتی ہے!</string>
    <string name="note">نوٹ</string>
    <string name="paymentReminder">اگراہی</string>
    <string name="phone_number_optional">فون نمبر (آپشنل)</string>
    <string name="report">رپورٹ</string>
    <string name="resend_by_call">کوڈ کال پر وصول کریں</string>
    <string name="save">محفوظ کریں</string>
    <string name="select_from_contacts">کنٹیکٹ کا انتخاب کریں</string>
    <string name="sendSms">اس کسٹمر کو مفت ایس ایم ایس بھیجیں</string>
    <string name="setDate">تاریخ طے کریں</string>
    <string name="setteled">برابر</string>
    <string name="shareBuisenss">اپنا بزنس کارڈ شیئر کریں</string>
    <string name="single_cot">\'</string>
    <string name="smsAPkeZUmy">آپ کے ذمے</string>
    <string name="smsDownload">ڈیجی کھاتہ ڈاؤن لوڈ کریں.</string>
    <string name="smsDue">کو واجب الادا ہیں.</string>
    <string name="smsDueat" />
    <string name="smsFrom">منجانب:</string>
    <string name="smsPaymentReminder">پیمنٹ گزارش</string>
    <string name="smsPlease">براۓ مہربانی پیمنٹ کروا دیں.</string>
    <string name="smsTo">کسٹمر:</string>
    <string name="start">شروع کی تاریخ</string>
    <string name="startAb">شروع کریں</string>
    <string name="to" />
    <string name="toName">دیے</string>
    <string name="toName1">لیے</string>
    <string name="to_delete">ڈیلیٹ کرنے کے لئے \'</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="trans">رپورٹ</string>
    <string name="type">ٹائپ کریں \'</string>
    <string name="willgetthisonSMS">وہ یہ پیغام ایس ایم ایس پر حاصل کریں گے</string>
    <string name="willgetthisonwhatsapp">وہ یہ پیغام واٹس ایپ پر حاصل کریں گے</string>
    <string name="youGave">آپ نے</string>
    <string name="youGot">آپ نے</string>
    <string name="you_are_going_to">آپ \'</string>
    <string name="you_gave">آپ نے دینے ہیں</string>
    <string name="you_got">آپ نے لینے ہیں</string>
    <string name="you_will_loose">\' ڈیلیٹ کرنے جا رہے ہیں۔ ایسا کرنے سے آپ کی اِس کھاتہ میں کی ہوئی انٹریز ڈیلیٹ ہو جائیں گی۔ کیا آپ سچ میں ڈیلیٹ کرنا چاہتے ہیں؟</string>
    <string name="youwillget">آپ نے لینے ہیں</string>
    <string name="youwillgive">آپ نے دینے ہیں</string>
    <string name="abc_action_bar_home_description">گھر کی طرف نیویگیٹ کریں</string>
    <string name="abc_action_bar_up_description">اوپر نیویگیٹ کریں</string>
    <string name="abc_action_menu_overflow_description">مزید اختیارات</string>
    <string name="abc_action_mode_done">ہو گیا</string>
    <string name="abc_activity_chooser_view_see_all">سبھی دیکھیں</string>
    <string name="abc_activitychooserview_choose_application">ایک ایپ منتخب کریں</string>
    <string name="abc_capital_off">آف</string>
    <string name="abc_capital_on">آن</string>
    <string name="abc_menu_alt_shortcut_label">Alt+‎</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+‎</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+‎</string>
    <string name="abc_menu_meta_shortcut_label">Meta+‎</string>
    <string name="abc_menu_shift_shortcut_label">Shift+‎</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+‎</string>
    <string name="abc_prepend_shortcut_label">Menu+‎</string>
    <string name="abc_search_hint">تلاش کریں…</string>
    <string name="abc_searchview_description_clear">استفسار صاف کریں</string>
    <string name="abc_searchview_description_query">تلاش کا استفسار</string>
    <string name="abc_searchview_description_search">تلاش کریں</string>
    <string name="abc_searchview_description_submit">استفسار جمع کرائیں</string>
    <string name="abc_searchview_description_voice">صوتی تلاش</string>
    <string name="abc_shareactionprovider_share_with">اس کے ساتھ اشتراک کریں</string>
    <string name="abc_shareactionprovider_share_with_application">%s کے ساتھ اشتراک کریں</string>
    <string name="abc_toolbar_collapse_description">سکیڑیں</string>
    <string name="common_google_play_services_enable_button">فعال کریں</string>
    <string name="common_google_play_services_enable_text">‏جب تک آپ Google Play سروسز فعال نہیں کر لیتے، %1$s کام نہیں کرے گی۔</string>
    <string name="common_google_play_services_enable_title">‏Google Play سروسز فعال کریں</string>
    <string name="common_google_play_services_install_button">انسٹال کریں</string>
    <string name="common_google_play_services_install_text">‏%1$s Google Play سروسز کے بغیر نہیں چلے گی، جو آپ کے آلہ سے غائب ہیں۔</string>
    <string name="common_google_play_services_install_title">‏Google Play سروسز حاصل کریں</string>
    <string name="common_google_play_services_notification_channel_name">‏Google Play سروسز کی دستیابی</string>
    <string name="common_google_play_services_notification_ticker">‏Google Play سروسز کی خرابی</string>
</resources>