<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/top" android:background="#fff" android:layout_width="match_parent" android:layout_height="70dp">
        <TextView android:textSize="20dp" android:textColor="#000" android:id="@+id/heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:text="@string/UserProf" android:layout_centerVertical="true"/>
        <Button android:id="@+id/backB" android:background="#fff" android:paddingTop="20dp" android:layout_width="50dp" android:layout_height="70dp" android:drawableTop="@drawable/ic_arrow_new_back" android:layout_centerVertical="true" style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button android:textColor="#007399" android:id="@+id/update" android:background="@drawable/abb" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginRight="20dp" android:text="@string/save" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ImageView android:id="@+id/image" android:background="@drawable/ic_buisness" android:visibility="gone" android:clickable="false" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginTop="10dp" android:layout_below="@+id/top" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="20dp" android:textColor="#ff6701" android:id="@+id/labelname" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginTop="10dp" android:text="@string/YourBusinessName" android:layout_below="@+id/image" android:layout_centerHorizontal="true"/>
    <EditText android:textSize="18dp" android:gravity="center" android:id="@+id/lbname" android:layout_width="250dp" android:layout_height="40dp" android:layout_marginTop="15dp" android:maxLines="1" android:layout_below="@+id/labelname" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="20dp" android:textColor="#007399" android:id="@+id/BuisnessName" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginTop="10dp" android:text="Business name" android:layout_below="@+id/lbname"/>
    <EditText android:textSize="18dp" android:gravity="center" android:id="@+id/lbnam" android:visibility="gone" android:layout_width="250dp" android:layout_height="40dp" android:layout_below="@+id/BuisnessName" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="20dp" android:textColor="#ff6701" android:id="@+id/lregPhone" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginTop="10dp" android:text="@string/Phone" android:layout_below="@+id/lbnam" android:layout_centerHorizontal="true"/>
    <EditText android:enabled="false" android:textSize="18dp" android:textColor="#808080" android:gravity="center" android:id="@+id/edLregphone" android:focusable="false" android:clickable="false" android:layout_width="250dp" android:layout_height="40dp" android:layout_marginTop="15dp" android:layout_below="@+id/lregPhone" android:layout_centerHorizontal="true"/>
    <Button android:textColor="#fff" android:id="@+id/btnDelete" android:background="#b30000" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="70dp" android:layout_marginTop="10dp" android:text="@string/delete_business" android:drawableLeft="@drawable/ic_delete_24dp" android:layout_alignParentBottom="true"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="280dp" android:layout_marginBottom="-1dp" android:layout_alignParentBottom="true"/>
</RelativeLayout>
