<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:background="#f2f2f2" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:id="@+id/heading" android:background="#fff" android:layout_width="match_parent" android:layout_height="70dp">
            <Button android:id="@+id/back" android:background="#fff" android:paddingTop="20dp" android:layout_width="50dp" android:layout_height="70dp" android:drawableTop="@drawable/ic_arrow_new_back" android:layout_centerVertical="true" style="@style/Widget.AppCompat.Button.Borderless"/>
            <TextView android:textSize="20dp" android:textColor="#000" android:id="@+id/heading21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50dp" android:layout_marginTop="20dp" android:text="@string/Collections" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/heading">
            <RelativeLayout android:id="@+id/top" android:background="#ff6701" android:clickable="true" android:layout_width="match_parent" android:layout_height="80dp">
                <Button android:id="@+id/cal" android:background="@drawable/ic_rcdate" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginLeft="10dp" android:layout_centerVertical="true"/>
                <TextView android:textSize="15dp" android:textStyle="bold" android:textColor="#fff" android:id="@+id/stTit" android:layout_width="wrap_content" android:layout_height="24dp" android:layout_marginLeft="5dp" android:layout_marginTop="20dp" android:text="@string/PaymentCollectionDate" android:layout_toRightOf="@+id/cal"/>
                <TextView android:textSize="12dp" android:textColor="#fff" android:id="@+id/customers" android:layout_width="wrap_content" android:layout_height="30dp" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:text="@string/noOfCustomerCan" android:layout_toRightOf="@+id/cal" android:layout_below="@+id/stTit"/>
                <Button android:textSize="30dp" android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:background="@drawable/ic_key" android:layout_width="30dp" android:layout_height="30dp" android:layout_marginRight="5dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Base.Widget.AppCompat.Button.Borderless"/>
            </RelativeLayout>
            <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/top">
                <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                    <TextView android:textStyle="bold" android:textColor="#000" android:id="@+id/today" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:text="@string/TodaysCollection" android:layout_centerHorizontal="true"/>
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerr" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/today"/>
                    <ListView android:id="@+id/listToday" android:background="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/recyclerr"/>
                    <TextView android:textStyle="bold" android:textColor="#000" android:id="@+id/previous" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:text="@string/PreviousCollection" android:layout_below="@+id/listToday" android:layout_centerHorizontal="true"/>
                    <ListView android:id="@+id/listprevious" android:background="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/previous"/>
                    <TextView android:textStyle="bold" android:textColor="#000" android:id="@+id/uppcomming" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:text="@string/FutureCollections" android:layout_below="@+id/listprevious" android:layout_centerHorizontal="true"/>
                    <ListView android:id="@+id/upcomming" android:background="#fff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/uppcomming"/>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
