<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#f2f2f2" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/top" android:background="#fff" android:layout_width="match_parent" android:layout_height="50dp">
        <TextView android:textSize="20dp" android:textColor="#000" android:id="@+id/heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:text="@string/more" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="12sp" android:textColor="#969696" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60dp" android:layout_marginRight="15dp" android:text="Version: 2.2.4" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        <ImageButton android:id="@+id/back" android:background="@android:color/transparent" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_arrow_new_back"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/profileRv" android:background="#fff" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_below="@+id/top">
        <TextView android:textSize="25dp" android:textColor="#000" android:gravity="center" android:id="@+id/round" android:background="@drawable/blackkk" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="20dp" android:layout_marginTop="5dp" android:text="B" android:layout_centerHorizontal="true" android:textAllCaps="true"/>
        <TextView android:textSize="20sp" android:textColor="#000" android:gravity="center" android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginBottom="5dp" android:text="Business" android:maxLines="1" android:layout_below="@+id/round" android:layout_centerHorizontal="true"/>
        <TextView android:id="@+id/phone" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_below="@+id/name" android:layout_centerHorizontal="true"/>
        <Button android:textColor="#0000" android:id="@+id/nextProf" android:background="@drawable/ic_keyyyy" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginRight="30dp" android:layout_alignTop="@+id/round" android:layout_alignBottom="@+id/round" android:layout_alignParentRight="true" android:textAllCaps="false" style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/botomReV" android:layout_below="@+id/profileRv">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textColor="#ff6701" android:id="@+id/business" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" android:layout_marginTop="10dp" android:text="@string/add_new_business" android:drawableLeft="@drawable/ic_businesslogo" android:drawableRight="@drawable/ic_keyyyy" style="?android:attr/borderlessButtonStyle"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="60dp">
                <Button android:textColor="#ff6701" android:id="@+id/Applock" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/AppLock" android:drawableLeft="@drawable/ic_lock_orange" android:drawableRight="@drawable/ic_keyyyy" style="?android:attr/borderlessButtonStyle"/>
                <TextView android:textSize="12sp" android:textStyle="bold" android:textColor="#ffffff" android:id="@+id/tv_new" android:background="#f80505" android:paddingLeft="5dp" android:paddingTop="2dp" android:paddingRight="5dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="90dp" android:text="New" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <Button android:textColor="#ff6701" android:id="@+id/changeLan" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/Lang" android:drawableLeft="@drawable/ic_language_black_24dp" android:drawableRight="@drawable/ic_keyyyy" android:layout_below="@+id/Setting" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#ff6701" android:id="@+id/buisnessCard" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/Business" android:drawableLeft="@drawable/ic_businesslogo" android:drawableRight="@drawable/ic_keyyyy" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#ff6701" android:id="@+id/Setting" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/Setting" android:drawableLeft="@drawable/ic_backorange" android:drawableRight="@drawable/ic_keyyyy" android:layout_below="@+id/buisnessCard" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#ff6701" android:id="@+id/shareapp" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/ShareApp" android:drawableLeft="@drawable/ic_shorange24dp" android:drawableRight="@drawable/ic_keyyyy" android:layout_below="@+id/changeLan" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#ff6701" android:id="@+id/contact" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/Contact" android:drawableLeft="@drawable/ic_phorange" android:drawableRight="@drawable/ic_keyyyy" android:layout_below="@+id/shareapp" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#ff6701" android:id="@+id/how_to" android:background="#fff" android:paddingLeft="40dp" android:paddingRight="40dp" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="2dp" android:text="@string/how_to_use_digi_khata" android:drawableLeft="@drawable/ic_video_library_black_24dp" android:drawableRight="@drawable/ic_keyyyy" android:layout_below="@+id/Applock" style="?android:attr/borderlessButtonStyle"/>
            <Button android:textColor="#007399" android:background="#fff" android:paddingLeft="40dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" android:layout_marginTop="20dp" android:text="language" android:drawableLeft="@drawable/ic_sort_by_alpha_black_24dp"/>
            <Button android:textColor="#007399" android:background="#fff" android:paddingLeft="40dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="70dp" android:layout_marginTop="20dp" android:text="App lock" android:drawableLeft="@drawable/ic_sort_by_alpha_black_24dp"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@+id/botomReV" android:background="#fff" android:layout_width="match_parent" android:layout_height="70dp" android:layout_alignParentBottom="true">
        <Button android:id="@+id/homeBut" android:background="#fff" android:paddingTop="15dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/home" android:drawableTop="@drawable/ic_ho_24dp" android:layout_toLeftOf="@+id/centre" android:textAllCaps="false" style="@style/Base.Widget.AppCompat.Button.Borderless"/>
        <TextView android:enabled="false" android:id="@+id/centre" android:focusable="false" android:layout_width="1dp" android:layout_height="1dp" android:layout_centerHorizontal="true"/>
        <Button android:id="@+id/morebut" android:background="#fff" android:paddingTop="15dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/more" android:drawableTop="@drawable/ic_homemoreorange" android:layout_toRightOf="@+id/centre" android:textAllCaps="false" style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>
</RelativeLayout>
